; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/genet/extr_bcmgenet.c_bcmgenet_free_rx_buffers.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/genet/extr_bcmgenet.c_bcmgenet_free_rx_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcmgenet_priv = type { i32, %struct.TYPE_2__*, %struct.enet_cb* }
%struct.TYPE_2__ = type { i32 }
%struct.enet_cb = type { i32 }
%struct.sk_buff = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bcmgenet_priv*)* @bcmgenet_free_rx_buffers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcmgenet_free_rx_buffers(%struct.bcmgenet_priv* %0) #0 {
  %2 = alloca %struct.bcmgenet_priv*, align 8
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.enet_cb*, align 8
  %5 = alloca i32, align 4
  store %struct.bcmgenet_priv* %0, %struct.bcmgenet_priv** %2, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %31, %1
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.bcmgenet_priv*, %struct.bcmgenet_priv** %2, align 8
  %9 = getelementptr inbounds %struct.bcmgenet_priv, %struct.bcmgenet_priv* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %7, %10
  br i1 %11, label %12, label %34

12:                                               ; preds = %6
  %13 = load %struct.bcmgenet_priv*, %struct.bcmgenet_priv** %2, align 8
  %14 = getelementptr inbounds %struct.bcmgenet_priv, %struct.bcmgenet_priv* %13, i32 0, i32 2
  %15 = load %struct.enet_cb*, %struct.enet_cb** %14, align 8
  %16 = load i32, i32* %5, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.enet_cb, %struct.enet_cb* %15, i64 %17
  store %struct.enet_cb* %18, %struct.enet_cb** %4, align 8
  %19 = load %struct.bcmgenet_priv*, %struct.bcmgenet_priv** %2, align 8
  %20 = getelementptr inbounds %struct.bcmgenet_priv, %struct.bcmgenet_priv* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load %struct.enet_cb*, %struct.enet_cb** %4, align 8
  %24 = call %struct.sk_buff* @bcmgenet_free_rx_cb(i32* %22, %struct.enet_cb* %23)
  store %struct.sk_buff* %24, %struct.sk_buff** %3, align 8
  %25 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %26 = icmp ne %struct.sk_buff* %25, null
  br i1 %26, label %27, label %30

27:                                               ; preds = %12
  %28 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %29 = call i32 @dev_consume_skb_any(%struct.sk_buff* %28)
  br label %30

30:                                               ; preds = %27, %12
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %5, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %5, align 4
  br label %6

34:                                               ; preds = %6
  ret void
}

declare dso_local %struct.sk_buff* @bcmgenet_free_rx_cb(i32*, %struct.enet_cb*) #1

declare dso_local i32 @dev_consume_skb_any(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
